--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
   "name": "r-typro-electron",
   "version": "0.1.0",
+  "main": "main.js",
   "private": true,
   "dependencies": {
+    "concurrently": "^4.1.2",
+    "cross-env": "^5.2.1",
+    "electron": "^6.0.9",
+    "electron-is-dev": "^1.1.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "wait-on": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "electron .",
+    "ele": "concurrently \"wait-on http://localhost:3000 && electron .\" \"cross-env BROWSER=none yarn run start\""
   },
   "eslintConfig": {
     "extends": "react-app"
